--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>this is the titile 2:08pm</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 master 1:48
+<h1>2:22pm</h1>
 </body>
-</html>
+</html>g
